test/classes/errors/nilability-init-var/init-var-nonnil-shared-from-nonnil-borrowed.good
init-var-nonnil-shared-from-nonnil-borrowed.chpl:9: error: cannot assign to a shared variable from a borrowed class
